# olist-databricks-medallion-lakehouse

./: .gitignore  GOLD.md  README.md  databricks.yml  job_databricks.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
conf/bronze/: customers.yaml  geolocation.yaml  order_items.yaml  order_payments.yaml  order_reviews.yaml  orders.yaml  product_category_name_trans.yaml  products.yaml  sellers.yaml
conf/gold/: dim_customers.yaml  dim_products.yaml  dim_sellers.yaml
conf/silver/: customers.yaml  order_items.yaml  order_payments.yaml  order_reviews.yaml  orders.yaml  products.yaml  sellers.yaml
conf/tables/: customers.yaml
notebooks/medallion/: 01_bronze.ipynb  02_silver.ipynb  03_gold.ipynb  bronze.ipynb  silver.ipynb
notebooks/medallion/gold/: dim_dates.ipynb  fact_payment_summary.ipynb  fact_product_performance.ipynb  fact_sales.ipynb  fact_seller_performance.ipynb
notebooks/setup/: bootstrap_azure.ipynb  bootstrap_free_edition.ipynb  copy_files_to_folder.ipynb  import_landing_csvs.ipynb
notebooks/setup/limpeza_provisoria/: limpar e reprocessar - provisorio.ipynb
src/: data_ingestion.py  pipeline_config.py  schema_builder.py
src/config/: bronze_config.py  dataset_config.py  gold_config.py  parameters_config.py  silver_config.py
src/io/: reader.py  writer.py
src/lakehouse_engine/: __init__.py
src/lakehouse_engine/config/: __init__.py  (+5 more)
src/schema/: schema_builder.py
src/spark/: spark.py
src/utils/: logging_config.py
tests/: test_dataset_config.py  test_schema_builder.py
uc/ddl/: bootstrap.sql.dbquery.ipynb
(+7 files in other folders)
