[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-engine"
version = "0.1.0"
description = "Reusable pipeline for Databricks Medallion Architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.990",
]

[tool.setuptools]
packages = ["lakehouse_engine"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
lakehouse_engine = ["py.typed"]