[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-medallion-lakehouse"
version = "0.1.0"
description = "Medallion Architecture pipeline para Databricks (Bronze → Silver → Gold)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect>=18.0,<19",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.990",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]